fix: upsert coa child
