# svelte/swagger.json
@@ -1524,96 +1524,6 @@
 				}
 			}
 		},
-		"/tenantAdmin/createOrganizationChild": {
-			"post": {
-				"security": [{
-					"CookieAuth": []
-				}],
-				"tags": ["API"],
-				"requestBody": {
-					"content": {
-						"application/json": {
-							"schema": {
-								"type": "object",
-								"properties": {
-						"name": {
-								"type": "string"
-						},
-						"headTitle": {
-								"type": "string"
-						},
-						"parentId": {
-								"type": "number"
-						}
-								}
-							}
-						}
-					}
-				},
-				"responses": {
-					"200": {
-						"description": "TenantAdminCreateOrganizationChild",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"org": {
-										"type": "object",
-										"properties": {
-												"id": {
-														"type": "number"
-												},
-												"tenantCode": {
-														"type": "string"
-												},
-												"name": {
-														"type": "string"
-												},
-												"headTitle": {
-														"type": "string"
-												},
-												"parentId": {
-														"type": "number"
-												},
-												"children": {
-												"type": "object",
-												"properties": {
-														}
-												},
-												"orgType": {
-														"type": "number"
-												},
-												"createdAt": {
-														"type": "number"
-												},
-												"createdBy": {
-														"type": "number"
-												},
-												"updatedAt": {
-														"type": "number"
-												},
-												"updatedBy": {
-														"type": "number"
-												},
-												"deletedAt": {
-														"type": "number"
-												}
-												}
-										},
-										"orgs": {
-										"type": "object",
-										"properties": {
-												}
-										}
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		},
 		"/tenantAdmin/dashboard": {
 			"post": {
 				"security": [{
@@ -2301,96 +2211,6 @@
 				}
 			}
 		},
-		"/tenantAdmin/updateOrganizationChild": {
-			"post": {
-				"security": [{
-					"CookieAuth": []
-				}],
-				"tags": ["API"],
-				"requestBody": {
-					"content": {
-						"application/json": {
-							"schema": {
-								"type": "object",
-								"properties": {
-						"id": {
-								"type": "number"
-						},
-						"name": {
-								"type": "string"
-						},
-						"headTitle": {
-								"type": "string"
-						}
-								}
-							}
-						}
-					}
-				},
-				"responses": {
-					"200": {
-						"description": "TenantAdminUpdateOrganizationChild",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "object",
-									"properties": {
-										"org": {
-										"type": "object",
-										"properties": {
-												"id": {
-														"type": "number"
-												},
-												"tenantCode": {
-														"type": "string"
-												},
-												"name": {
-														"type": "string"
-												},
-												"headTitle": {
-														"type": "string"
-												},
-												"parentId": {
-														"type": "number"
-												},
-												"children": {
-												"type": "object",
-												"properties": {
-														}
-												},
-												"orgType": {
-														"type": "number"
-												},
-												"createdAt": {
-														"type": "number"
-												},
-												"createdBy": {
-														"type": "number"
-												},
-												"updatedAt": {
-														"type": "number"
-												},
-												"updatedBy": {
-														"type": "number"
-												},
-												"deletedAt": {
-														"type": "number"
-												}
-												}
-										},
-										"orgs": {
-										"type": "object",
-										"properties": {
-												}
-										}
-									}
-								}
-							}
-						}
-					}
-				}
-			}
-		},
 		"/tenantAdmin/upsertBudgetPlan": {
 			"post": {
 				"security": [{
@@ -2556,6 +2376,129 @@
 									"type": "object",
 									"properties": {
 										"coas": {
+										"type": "object",
+										"properties": {
+												}
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+			"post": {
+				"security": [{
+					"CookieAuth": []
+				}],
+				"tags": ["API"],
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+						"org": {
+						"type": "object",
+						"properties": {
+								"id": {
+										"type": "number"
+								},
+								"tenantCode": {
+										"type": "string"
+								},
+								"name": {
+										"type": "string"
+								},
+								"headTitle": {
+										"type": "string"
+								},
+								"parentId": {
+										"type": "number"
+								},
+								"children": {
+								"type": "object",
+								"properties": {
+										}
+								},
+								"orgType": {
+										"type": "number"
+								},
+								"createdAt": {
+										"type": "number"
+								},
+								"createdBy": {
+										"type": "number"
+								},
+								"updatedAt": {
+										"type": "number"
+								},
+								"updatedBy": {
+										"type": "number"
+								},
+								"deletedAt": {
+										"type": "number"
+								}
+								}
+						}
+								}
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "TenantAdminUpsertOrganizationChild",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"org": {
+										"type": "object",
+										"properties": {
+												"id": {
+														"type": "number"
+												},
+												"tenantCode": {
+														"type": "string"
+												},
+												"name": {
+														"type": "string"
+												},
+												"headTitle": {
+														"type": "string"
+												},
+												"parentId": {
+														"type": "number"
+												},
+												"children": {
+												"type": "object",
+												"properties": {
+														}
+												},
+												"orgType": {
+														"type": "number"
+												},
+												"createdAt": {
+														"type": "number"
+												},
+												"createdBy": {
+														"type": "number"
+												},
+												"updatedAt": {
+														"type": "number"
+												},
+												"updatedBy": {
+														"type": "number"
+												},
+												"deletedAt": {
+														"type": "number"
+												}
+												}
+										},
+										"orgs": {
 										"type": "object",
 										"properties": {
 												}
